<resources>
    <string name="app_name">Учет ПО в учебном заведении</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Учет ПО в учебном заведении</string>
    <string name="nav_header_subtitle">Главное меню</string>
    <string name="nav_header_desc">Заголовок навигации</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Аудитории</string>
    <string name="menu_gallery">Компьютеры</string>
    <string name="menu_slideshow">Слайдшоу</string>
    <string name="softwares">Программное обеспечение</string>
    <string name="licences">Копии ПО</string>
    <string name="installedSoftwares">Установленное ПО</string>
    <string name="employees">Сотрудники</string>
    <string name="computers">Компьютеры</string>
    <string name="audiences">Аудитории</string>
    <string name="NullStringValueLowerCase">не указано</string>
    <string name="default_notification_channel_id">default_notification_channel</string>
</resources>